--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -41,13 +41,13 @@ body {
 	width: 260px;
 	height: 30px;
 }
-.text-input1 {
+.field1 {
 	margin: 15px 30px 20px 30px;
 }
-.text-input2 {
+.field2 {
 	margin: 17px 30px 20px 30px;
 }
-.text-input3 {
+.field3 {
 	margin: 16px 30px 35px 30px;
 }
 
