--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -1,67 +1,74 @@
 body {
-	box-sizing: border-box;
+	  font-family: 'Arial';
+  font-size: 12px;
+  color: #333333;
 }
-.main {
+.container {
 	width: 570px;
 	height: 570px;
-	background-color:  #ebf4f4;
-	position: fixed;
+	background: url(../img/bg.png) no-repeat;
+	  margin: 0;
+  padding: 0;
 }
+
 .form {
-	margin: 100px 125px;
-	border: 1px solid #cfdede;
-	background-color:  #ffffff;
-	text-align: center;
-	width: 324px;
-	height: 374px;
+  position: relative;
+  width: 320px;
+  height: 370px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: 98px 123px;
+  background-color: #fbfdfd;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+  border: 1px solid #cfdede;
 }
-.header-form {
-	text-align: center;
-	text-transform: uppercase;
-	font-size: 12px;
-	margin: -5px 29px 20px;
-	border: 1px solid #dcdcdc;
-	background-color:  #01b3b3;
-	width: 152px;
-	height: 28px;
-	color: #ffffff;
+
+.header {
+	position: absolute;
+  padding: 5px 8px;
+  left: 30px;
+  top: -5px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #01b3b3;
 }
-.name_input1 {
-	margin-top: 27px;
-}
-.name_input1, .name_input2, .name_input3 {
-	text-decoration: none;
-	text-align: left;
-	margin-left: 30px;
-	font-size: 14px;
+
+.form_input {
 	display: block;
-	font-weight: 800;
-	color: #333333;
-	line-height: 13px;
+  font-weight: 900;
+}
+.email {
+	margin-top: 45px;
+	margin-bottom: 10px;
 }
 
-.field1, .field2, .field3 {
-	background-color: #ebf4f4;
-	display: block;
-	width: 255px;
-	height: 30px;
-	margin-left: 30px;
+.password {
+	margin: 16px 0px 12px 0px;
 }
 
-.field1 {
-	width: 245px;
-	padding: 0px 0px 0px 10px;
+
+.field {
+	background: url(../img/bg.png) no-repeat;
+  width: 100%;
+  padding: 7px 12px;
+
+  color: #777777;
+  font-style: italic;
+  border: 1px solid #cfdede;
+
 }
 
-.btn {
-	margin: 25px;
-	text-transform: uppercase;
-	font-size: 16px;
-	width: 264px;
-	height: 48px;
-	border: 1px solid #dcdcdc;
-	background-color: #01b3b3;
-	color: #ffffff;
-	font-weight: 400;
+.form-btn {
+ width: 260px;
+  height: 45px;
+  margin-top: 34px;
+  margin-bottom: 30px;
+	border: none;
+  font-size: 16px;
+  color: #ffffff;
+  font-weight: 700;
+  text-transform: uppercase;
+	background: url(../img/btn.png) no-repeat;
 }
 
