--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -29,6 +29,7 @@ body {
   left: 30px;
   top: -5px;
   text-transform: uppercase;
+  font-size: 12px;
   font-weight: bold;
   color: #ffffff;
   background-color: #01b3b3;
@@ -39,7 +40,7 @@ body {
   font-weight: 900;
 }
 .email {
-	margin-top: 55px;
+	margin-top: 53px;
 	margin-bottom: 10px;
 }
 
