--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -25,18 +25,23 @@ body {
 
 .header {
 	position: absolute;
-  padding: 5px 7px;
+	width: 155px;
+	height: 25px;
+  padding: 5px 8px;
   left: 30px;
   top: -5px;
   text-transform: uppercase;
   font-size: 12px;
-  font-weight: bold;
+  // font-weight: bold;
+  text-align: center;
   color: #ffffff;
   background-color: #01b3b3;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.15);
 }
 
 .form_input {
 	display: block;
+	line-height: 13px;
   font-weight: 900;
 }
 .email {
@@ -45,7 +50,7 @@ body {
 }
 
 .password {
-	margin: 16px 0px 12px 0px;
+	margin: 18px 0px 16px 0px;
 }
 
 
@@ -53,8 +58,9 @@ body {
 	background: url(../img/bg.png) no-repeat;
   width: 100%;
   padding: 7px 12px;
-
+line-height: 12px;
   color: #777777;
+  font-size: 12px;
   font-style: italic;
   border: 1px solid #cfdede;
 
@@ -68,7 +74,7 @@ body {
 	border: none;
   font-size: 16px;
   color: #ffffff;
-  font-weight: 700;
+  font-weight: 600;
   text-transform: uppercase;
 	background: url(../img/btn.png) no-repeat;
 }
