--- a/Practice_9/css/style.css
+++ b/Practice_9/css/style.css
@@ -366,6 +366,9 @@ section {
 .all-inclusive {
   background-color: #f5f5f5;
 }
+.all-inclusive .section-header_active h2 {
+			color: @icons-color;
+		}
 .all-inclusive .media {
   min-height: 9rem;
 }
