--- a/Practice_9/css/style.css
+++ b/Practice_9/css/style.css
@@ -366,7 +366,7 @@ section {
 .all-inclusive {
   background-color: #f5f5f5;
 }
-.all-inclusive .section-header_active h2 {
+.all-inclusive .section-header h2 {
   color: #46b814;
 }
 .all-inclusive .media {
